# videoHub

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  settings.toml
cmake/: Windeployqt.cmake
src/: CMakeLists.txt  MainWindow.qml  configuration.cpp  configuration.h  database.cpp  database.h  downloader.hpp  file_icon.rc  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  renderer.cpp  renderer.h  resman.h  resource.qrc  resource.rc  resource_bundle.lib  resource_list.h  roboto_medium.hpp  state.hpp  task.hpp  task_queue.hpp  task_store.hpp  update_resource.py  utility.hpp  utility_win.hpp
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/common/: global_def.h  log.h  ref_ptr.h
src/fonts/: FontAwesome.qml  Icons.qml
src/imgui_app/: CMakeLists.txt  downloader.hpp  main.cpp  task_queue.hpp
src/model/: CMakeLists.txt  configuration.cpp  configuration.h  icons.h  new_item_page.cpp  new_item_page.h  qml_type_register.cpp  qml_type_register.h  qmldir
src/theme/: LightTheme.qml  Theme.qml
src/ui/: LocalPage.qml  NewItemPage.qml
src/unittest/: CMakeLists.txt  main.cpp  utility_test.cpp
src/view/: CMakeLists.txt  MainWindow.qml  resource.qrc  update_resource.py
src/view/controls/: IconLabel.qml  IconValueInput.qml  Input.qml  KeyValueLabel.qml  SimpleButton.qml
src/view/fonts/: fontawesome_cpp.py  fontawesome_qml.py  qmldir
src/view/page/: Config.qml  Content.qml  Input.qml  Navigation.qml  NewItemPage.qml  WindowHeader.qml
src/view/theme/: BaseTheme.qml  DarkTheme.qml  qmldir
